<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linear_layout"/>
            <Button
                android:id="@+id/constraint_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constraint_layout"/>
            <Button
                android:id="@+id/coordinator_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coordinator_layout"/>
            <Button
                android:id="@+id/frame_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frame_layout"/>
            <Button
                android:id="@+id/grid_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_layout"/>
            <Button
                android:id="@+id/relative_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relative_layout"/>
            <Button
                android:id="@+id/scrollview_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scrollview_layout"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>